# cs599-project

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a4d77eaf6b1_initial_tables.py
backend/src/: main.py
backend/src/agents/: answer.py  planner.py  query.py  reflection.py  rerank.py  retriever.py  state.py
backend/src/api/v1/: auth.py  chat.py  conversations.py  documents.py  health.py  retrieval_debug.py
backend/src/core/: auth.py  config.py  deps.py  logging.py
backend/src/memory/: conversation_memory.py
backend/src/models/: __init__.py  base.py  conversation.py  document.py  retrieval.py  user.py
backend/src/repositories/: base.py  conversation_repo.py  document_repo.py  retrieval_repo.py
backend/src/retrieval/: bm25.py  chunker.py  embeddings.py  hybrid.py  reranker.py  vector_store.py
backend/src/schemas/: chat.py  common.py  document.py  retrieval.py
backend/src/services/: chat_service.py  document_service.py  retrieval_service.py
backend/src/tests/: conftest.py
backend/src/tests/test_agents/: test_planner.py  test_reflection.py  test_state.py
backend/src/tests/test_api/: test_auth.py  test_chat.py  test_documents.py  test_health.py
backend/src/tests/test_memory/: test_conversation_memory.py
backend/src/tests/test_retrieval/: test_bm25.py  test_chunker.py  test_hybrid.py
backend/src/tests/test_schemas/: test_chat.py  test_common.py  test_document.py  (+1 more)
backend/src/utils/: file_utils.py  text_utils.py
backend/src/workflows/: document_pipeline.py  rag_workflow.py
(+46 files in other folders)
