[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise Agentic-RAG Knowledge Base System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    # LLM / Agent
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-anthropic>=0.3",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1",
    "alembic>=1.14",
    # Vector DB
    "pymilvus>=2.4",
    # Cache
    "redis[hiredis]>=5.0",
    # Embedding / Reranker
    "sentence-transformers>=3.3",
    "torch>=2.4",
    "FlagEmbedding>=1.2",
    # Document processing
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "chardet>=5.2",
    # Text processing
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "tiktoken>=0.7",
    # HTTP
    "httpx>=0.27",
    # Config
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # Logging
    "structlog>=24.1",
    # Utils
    "tenacity>=9.0",
    "python-multipart>=0.0.12",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
asyncio_mode = "auto"
